Update InvoiceHistoryControllerTest.java